testsuite/tests/grammar/invalid_abstract_fields/inconsistent-overriding-type.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- ExampleHolder(Example("example"))
}

@abstract class FooNode implements Node[FooNode] {
}

@abstract class BaseExampleHolder : FooNode {
    @abstract @parse_field f: Example
}

class ExampleHolder : BaseExampleHolder {
    @parse_field f: FooNode
}

class Example : FooNode implements TokenNode {
}
